<?xml version="1.0"?>
<package>
  <name>april_planner</name>
  <version>0.0.1</version>
  <description>Issues cmd_vel until the desired apriltag is at the requested coordinates</description>

  <maintainer email="jak000@gmail.com">Jack Qiao</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>apriltags_nodelet</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>apriltags_nodelet</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
