<?xml version="1.0"?>
<package>
  <name>april_tf</name>
  <version>0.0.1</version>
  <description>Takes apriltag detection messages and re-serves them in a global map frame. Persists the detections between ROS sessions, and serves a "target" pose for use with move_base</description>

  <maintainer email="jak000@gmail.com">Jack Qiao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>apriltags_nodelet</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>apriltags_nodelet</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
</package>
