<?xml version="1.0"?>
<package format="2">
  <name>depth_object_detector</name>
  <version>0.0.1</version>
  <description>
    takes a depth image frame and returns true/false if an object is detected in the specified x/y screen coordinates
  </description>
  <maintainer email="jak000@gmail.com">Jack Qiao</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nodelet</depend>
  <depend>depth_image_proc</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
