<?xml version="1.0"?>
<package>
  <name>gpu_robot_vision</name>
  <version>0.0.1</version>
  <description>
     Uses OpenCV gpu functions for
     camera image rectification etc.
  </description>

  <maintainer email="jak000@gmail.com">Jack Qiao</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/Jack000</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  
<build_depend>cgal</build_depend>
<build_depend>visualization_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cgal</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
